Feat: 마시막 메시지 n분 전/n 시간 전으로 변경

--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -94,7 +94,7 @@
   font-size: $font-size-s;
   position: absolute;
   letter-spacing: -0.1rem;
-  width: 100%;
+  text-wrap: nowrap;
   text-align: center;
   right: 6rem;
   top: 0.2rem;
