--- a/components/ChatList/ChatListModal.module.scss
+++ b/components/ChatList/ChatListModal.module.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: .5rem;
     width: 30rem;
     height: 150px;
     border-radius: 20px;
@@ -25,6 +25,10 @@
         top : 1rem;
         font-weight: bold;
       }
+    p {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
 
     input {
         border : 1px solid $brand-pink;
