--- a/components/chat/Chat.module.scss
+++ b/components/chat/Chat.module.scss
@@ -4,14 +4,16 @@
 /*---------- 전체 container 스타일 ----------*/
 .container {
   @include container;
-  position: relative;
-  margin-top: 80px;
+
+  margin-top: 6rem;
+  margin-bottom: 8rem;
+
+  height: 100%;
 }
 
 /*---------- header 영역 스타일 ----------*/
 .header {
   @include flex-between-row;
-  flex-wrap: wrap;
 
   position: fixed;
   top: 0;
@@ -23,6 +25,19 @@
 
   border-bottom: 0.1rem solid #ff347893;
   background-color: white;
+
+  // 채팅방 이름
+  .chatTitle {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    @media (min-width: 800px) {
+      font-size: 2rem;
+    }
+    @media (max-width: 799px) {
+      font-size: $font-size-lg;
+    }
+  }
 
   // 뒤로가기 버튼, 메뉴(속성) 버튼
   .left,
@@ -68,13 +83,31 @@
     padding: 1rem;
     border-bottom: 0.1rem solid $brand-pink;
   }
+  .userDiv {
+    max-height: 20rem; /* 목록의 최대 높이 */
+    overflow-y: auto; /* 내용이 넘칠 경우 스크롤을 생성 */
+  }
   li {
     padding: 0.8rem 0;
-
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     cursor: pointer;
 
     &:hover {
       background-color: $light-gray; // 항목에 호버 시 배경색 변경
+    }
+    .profileImage {
+      width: 3.5rem;
+      height: 3.5rem;
+      border-radius: 50%;
+      margin-right: 0.5rem;
+    }
+    .username {
+      font-size: $font-size-s;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
 
@@ -89,6 +122,8 @@
     border: none;
     outline: none;
     border-radius: 0.5rem;
+
+    cursor: pointer;
     &:hover {
       background-color: $brand-pink;
       transition: 0.3s;
@@ -99,7 +134,6 @@
 /*---------- footer 영역 스타일 ----------*/
 .footer {
   @include flex-center-row;
-  flex-wrap: wrap;
 
   background-color: #ebe9e9;
 
@@ -217,7 +251,8 @@
       margin-bottom: 0.4rem;
     }
 
-    .content { /* 채팅 메시지 최대 너비 설정 */
+    .content {
+      /* 채팅 메시지 최대 너비 설정 */
 
       @media (min-width: 800px) {
         max-width: 60rem;
@@ -232,7 +267,6 @@
 
       padding: 1rem;
       border-radius: 1.8rem;
-
 
       word-wrap: break-word;
       white-space: pre-wrap;
@@ -289,9 +323,7 @@
   @include flex-center-row;
 
   padding: 1rem 0;
-
   width: 100%;
-
   overflow: hidden;
 
   .box {
